--- a/app/scripts/views/directive/upload/showUpload.html
+++ b/app/scripts/views/directive/upload/showUpload.html
@@ -1,4 +1,4 @@
-<div>
+<div class="" style="border: 1px #ccc solid;">
     <style type="text/css">
         .upload-image {
             width: 100%;
@@ -202,7 +202,7 @@
     <!--</tr>-->
     <!--</tbody>-->
     <!--</table>-->
-    <div ng-class="{'hide':disabled}">
+    <div ng-class="{'hide':disabled}" style="padding: 10px;">
         <div class="form-group" style="margin-bottom: 5px;">
             <!--上传过程:-->
             <div class="col-sm-12">
