--- a/app/scripts/views/directive/upload/showUpload.html
+++ b/app/scripts/views/directive/upload/showUpload.html
@@ -77,7 +77,7 @@
             color: #3c763d;
         }
     </style>
-    <div class="row">
+    <div class="row" style="margin: 0">
         <div class="panel panel-info" style="border: 0">
             <!--<div class="panel-heading"></div>-->
             <div class="panel-body dndsimpleDemo" ng-show="images&&images.length>0">
