点播分享URL 非必填

--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -27,7 +27,7 @@
                         <div form-radio text="订单类型" type="radio" ng-model="param.sku" required="true" default="10"
                              source="[{text:'十万漫游',value:'10'},{text:'免费',value:'0'}]" source-api=""></div>
 
-                        <div form-input text="分享URl" ng-model="param.share_url" placeholder="分享URl" required="true"></div>
+                        <div form-input text="分享URl" ng-model="param.share_url" placeholder="分享URl"></div>
 
                         <div form-image-single text="直播图片" ng-model="param.pic_url" required="true"></div>
 
