--- a/app/scripts/views/biz/support/upgradesAdd.html
+++ b/app/scripts/views/biz/support/upgradesAdd.html
@@ -13,7 +13,7 @@
                         <div class="form-group">
                             <div form-apk text="Apk安装包" ng-model="apk" max="1" required="true"></div>
                             <div form-radio text="版本环境" type="radio" ng-model="param.environment" required="true"
-                                 default="test" source="[{text:'测试',value:'test'},{text:'正式',value:'product'}]"
+                                 default="test" source="[{text:'测试',value:'testing'},{text:'正式',value:'production'}]"
                                  source-api=""></div>
                             <div form-textarea text="更新说明" ng-model="param.content" required="true" col="5"></div>
                             <div form-input text="版本号" ng-model="param.version" required="true"></div>
