--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -10468,6 +10468,14 @@ html, body {
     width: 250px;
 }
 
+.width300 {
+    width: 300px;
+}
+
+.width500 {
+    width: 500px;
+}
+
 .overflowAuto {
     overflow: auto;
 }
