--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -10411,36 +10411,36 @@ html, body {
     background: #424242 !important;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-1 {
-    background: #f70b0b !important;
-}
+/*.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-1 {*/
+    /*background: #f70b0b !important;*/
+/*}*/
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-2 {
-    background: #ffe62e !important;
-}
+/*.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-2 {*/
+    /*background: #ffe62e !important;*/
+/*}*/
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-3 {
-    background: #4f4f4f !important;
-}
+/*.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-3 {*/
+    /*background: #4f4f4f !important;*/
+/*}*/
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-4 {
-    background: #424242 !important;
-}
+/*.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-4 {*/
+    /*background: #424242 !important;*/
+/*}*/
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-5 {
-    background: #f70b0b !important;
-}
+/*.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-5 {*/
+    /*background: #f70b0b !important;*/
+/*}*/
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-6 {
-    background: #ffe62e !important;
-}
+/*.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-6 {*/
+    /*background: #ffe62e !important;*/
+/*}*/
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-7 {
-    background: #4f4f4f !important;
-}
+/*.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-7 {*/
+    /*background: #4f4f4f !important;*/
+/*}*/
 
 .simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list {
-    height: 20px !important;
+    /*height: 20px !important;*/
     overflow: hidden !important;
 }
 
