--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -45,7 +45,11 @@
                              required="true"></div>
                         <div form-input text="视频时长" ng-model="param.record.video_duration" placeholder="视频时长"
                              required="true"></div>
-                        <div form-input text="排序" ng-model="param.order_by" placeholder="排序" type="number" min="0" required="true"></div>
+                        <div form-radio text="是否回放" ng-model="param.record.play_back" required="true" default="1"
+                             source="[{text:'回放',value:'1'},{text:'不回放',value:'2'}]" source-api=""></div>
+                        <div form-input text="排序" ng-model="param.order_by" placeholder="排序" type="number" min="0"
+                             required="true"></div>
+                        <div form-rich-text text="看点" ng-model="param.watch_point" placeholder="看点"></div>
                     </div>
                 </div>
 
