--- a/app/scripts/views/biz/cctalk_info/sendsms.html
+++ b/app/scripts/views/biz/cctalk_info/sendsms.html
@@ -34,13 +34,15 @@
                                    ng-bind="info.exchangecodes|arraySub2String:'code'"> &nbsp;</p>
                             </div>
                         </div>
+
                         <div class="form-group">
                             <label class="col-sm-2 control-label">是否发送过短信消息<span
                                     class="form_label_dangus"></span></label>
                             <div class="col-sm-8">
                                 <p class="form-control"
                                    style="background-color: #eee;min-height: 34px;height: auto;word-break: break-word;"
-                                   ng-bind="info.send_message.sms_result_status|keyVal:'1':'已发送':'0':'未发送'"> &nbsp;</p>
+                                   ng-bind="info.send_message.sms_result_status|keyVal:'1':'已发送':'0':'未发送'|null2empty">
+                                    &nbsp;</p>
                             </div>
                         </div>
                         <div class="form-group">
@@ -49,7 +51,8 @@
                             <div class="col-sm-8">
                                 <p class="form-control"
                                    style="background-color: #eee;min-height: 34px;height: auto;word-break: break-word;"
-                                   ng-bind="info.send_message.wechat_result_status|keyVal:'1':'已发送':'0':'未发送'"> &nbsp;</p>
+                                   ng-bind="info.send_message.wechat_result_status|keyVal:'1':'已发送':'0':'未发送'|null2empty">
+                                    &nbsp;</p>
                             </div>
                         </div>
                     </div>
