--- a/app/scripts/views/biz/wechat/autoreply.html
+++ b/app/scripts/views/biz/wechat/autoreply.html
@@ -60,7 +60,7 @@
                                      ng-show="false"></div>
                                 <div form-table text="关键字列表" ng-model="val.keyword_list_info" max="1" required="true"
                                      columns="[{'name': '关键字类型', 'field': 'type',default:'text',hide:true},
-                             {'name': '匹配模式', 'field': 'match_mode',required:'true',default:'equal',hide:true},
+                             {'name': '匹配模式', 'field': 'match_mode',required:'true',radioBox:'true',default:'equal',source:'[{text:\'全等匹配\',value:\'equal\'},{text:\'包含匹配\',value:\'contain\'}]'},
                              {'name': '关键字', 'field': 'content',required:'true'}]"></div>
 
                                 <div form-table text="回复列表" ng-model="val.reply_list_info" max="1" required="true"
