--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -25,7 +25,7 @@
                              minlength="1" maxlength="30"></div>
 
                         <div form-radio text="订单类型" type="radio" ng-model="param.sku" required="true" default="10"
-                             source="[{text:'十万漫游',value:'10'},{text:'名校直播',value:'11'},{text:'少年演讲',value:'12'}
+                             source="[{text:'十万漫游',value:'10'},{text:'名校直播',value:'11'},{text:'成人演讲',value:'12'}
                              ,{text:'免费',value:'0'}]" source-api=""></div>
 
                         <div form-input text="分享URl" ng-model="param.share_url" placeholder="分享URl"></div>
